--- a/public/styles.css
+++ b/public/styles.css
@@ -32,7 +32,7 @@ a {
     font-size: 1.5em;
     cursor: pointer;
     padding: 0.625em 2em;
-    
+    width: 100px;
     border-radius: 0.2em;
 }
 a::hover {
